--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 server:
   port: 7575
-
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/hire_me_database
+    url: jdbc:postgresql://localhost:5432/hire_me_db
     username: postgres
     password: postgres
     hikari:
@@ -19,17 +18,18 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
-
+  flyway:
+    url: jdbc:postgresql://localhost:5432/hire_me_db
+    user: postgres
+    password: postgres
+    clean-disabled: false
+    locations: classpath:db/migration
   mvc:
     hiddenmethod:
       filter:
         enabled: true
-
   servlet:
     multipart:
       enabled: true
       max-file-size: 5MB
       max-request-size: 5MB
-
-
-
